--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -148,10 +148,10 @@ main {
 }
 
 .container {
-  background-color: #fff;
+  background-color: var(--background-color);
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   max-width: 800px;
   margin: 0 auto;
   text-align: center;
@@ -161,7 +161,7 @@ main {
   color: var(--accent-color);
   text-align: center;
   font-family: "Amiri", serif;
-  font-size: 2em;
+  font-size: 2.5em;
   margin-bottom: 20px;
 }
 
@@ -171,6 +171,11 @@ main {
   font-size: 1.2em;
   margin-top: -10px;
   margin-bottom: 20px;
+}
+
+.description {
+  margin-bottom: 30px;
+  font-size: 1.1em;
 }
 
 .input {
@@ -235,7 +240,7 @@ button:focus,
   }
 
   .title {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .subtitle {
