--- a/src/styles/RandomHadith.css
+++ b/src/styles/RandomHadith.css
@@ -68,6 +68,13 @@
   margin: 20px 0;
 }
 
+mark {
+  background-color: #ffeb3b;
+  color: #000;
+  padding: 2px 4px;
+  border-radius: 3px;
+}
+
 .error-container {
   text-align: center;
   margin-bottom: 20px;
